# aim-platform-sdk

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  tox.ini  travis.yml
.openapi-generator/: FILES
agent_marketplace_sdk.egg-info/: PKG-INFO  SOURCES.txt
aim_platform_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  pydantic.py  rest.py  schemas.py
docs/: Agent.md  AgentsResponse.md  Artifact.md  ArtifactsResponse.md  Benchmark.md  BenchmarkTicket.md  BenchmarksResponse.md  Bid.md  BidsResponse.md  Code.md  CreateAgentRequest.md  CreateArtifactRequest.md  CreateBenchmarkRequest.md  CreateBenchmarkTicketRequest.md  CreateBidRequest.md  CreateRepositoryRequest.md  CreateTicketRequest.md  CreateUserRequest.md  DefaultApi.md  Error.md  ErrorLinks.md  ErrorsResponse.md  ManageUserArtifactRequest.md  ManageUserBidRequest.md  RepositoriesResponse.md  Repository.md  Ticket.md  TicketsResponse.md  UpdateAgentRequest.md  UpdateRepositoryRequest.md  UpdateUserRequest.md  User.md  UserResponse.md
openapi_client/: api_client.py  pydantic.py  rest.py  schemas.py
test/: test_agent.py  test_agents_response.py  test_artifact.py  test_artifacts_response.py  test_benchmark.py  test_benchmark_ticket.py  test_benchmarks_response.py  test_bid.py  test_bids_response.py  test_code.py  test_create_agent_request.py  test_create_artifact_request.py  test_create_benchmark_request.py  test_create_benchmark_ticket_request.py  test_create_bid_request.py  test_create_repository_request.py  test_create_ticket_request.py  (+16 more)
(+304 files in other folders)
