[tool.poetry]
name = "aim_platform_sdk"
version = "0.1.0"
description = "Marketplace API"
authors = ["AI Maintainer Team <douglas@ai-maintainer.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ai_maintainer_inc/harness_sdk"
keywords = ["OpenAPI", "OpenAPI-Generator", "Marketplace API"]
include = ["aim_platform_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
